@@ -210,6 +210,9 @@ Changes include:
   RISC OS: support creating windows with the SDL_NOFRAME flag set.
 </P>
 <P>
+  RISC OS: increase the number of supported joystick buttons.
+</P>
+<P>
   Configuration: fix library detection selecting wrong lib (bug <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=2795">2795</a>.)
 </P>
 <P>
